# LogiPrune---Propositional-HPO-pruning

./: pyproject.toml
examples/: breast_cancer_demo.py  xgboost_entropy_demo.py
logiprune/: __init__.py  core.py  coverage.py  discretize.py  entropy.py  entropy_pipeline.py  fuzzy.py  pruner.py  relations.py  sweeper.py
tests/: test_logiprune.py
