[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logiprune"
version = "0.2.1"
description = "Propositional structure recovery and truth table entropy analysis for hyperparameter search space pruning"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Víctor Manuel Peralta Del Riego", email = "vperalta@ucaribe.edu.mx"}
]
keywords = [
  "machine learning", "hyperparameter optimization", "AutoML",
  "propositional logic", "XGBoost", "feature selection",
  "Shannon entropy", "model complexity", "Green AI"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.6"]
dev     = ["pytest>=7.0", "black", "ruff", "mypy", "xgboost>=1.6"]
docs    = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage      = "https://github.com/vperalta/logiprune"
"Bug Tracker" = "https://github.com/vperalta/logiprune/issues"
Documentation = "https://logiprune.readthedocs.io"
"Paper 1"     = "https://arxiv.org/abs/XXXX.XXXXX"
"Paper 2"     = "https://arxiv.org/abs/XXXX.XXXXX"

[tool.setuptools.packages.find]
where   = ["."]
include = ["logiprune*"]
